Issue #1 - start adding core/embed with the changeAlignment group. Resolve unique key prop problem for Fragment.

--- a/src/toolicons-block/style.scss
+++ b/src/toolicons-block/style.scss
@@ -49,7 +49,8 @@ ul.icons span {
 
 
 
-.blockToolbar svg:first-child {
+.blockToolbar svg:first-child,
+ul.icons svg:first-child{
   border-left: 1px solid grey;
 }
 
